# Study

./: README.md
qt/JustPlayer/: CMakeLists.txt  common.h  main.cpp  mainwindow.ui
qt/JustPlayer/ffmpeg/: CMakeLists.txt
qt/JustPlayer/ffmpeg/win64/: CMakeLists.txt
qt/JustPlayer/src/: XVideoWidget.cpp  XVideoWidget.h
qt/JustPlayer/src/opengl/: OpenglRender.cpp  OpenglRender.h
qt/JustPlayer/src/test/: TestCase.h
qt/JustPlayer/yuv/: encode_yuv_1366_768_yuv444_Frame2.yuv
